# coding-agent-nvt-v0

./: .gitignore  AGENT-EXAMPLES.md  AGENTS-QUICK-REFERENCE.md  AGENTS.md  ARCHITECTURE.md  INDEX.md  MIGRATION-COMPLETED.md  MIGRATION_GUIDE.md  NADIA-Flow.drawio  README.md  SETUP.md  START-HERE.md  VALIDATION-AGENTS.md  VALIDATION.md  nvt_agent_claude_v4.sln  test-agents.ps1  validate-agents.ps1  workflow-agents.ps1
.github/projects/systemA-systemB/src/: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/CsvProcessor.Functions/: CsvProcessor.Functions.csproj  Program.cs  host.json
src/CsvProcessor.Functions/Configuration/: AppSettings.cs
src/CsvProcessor.Functions/Functions/: CsvBlobTriggerFunction.cs
src/CsvProcessor.Functions/Models/: CsvOrderLine.cs  OrderMessage.cs  ProcessedFileEntity.cs  ProcessingResult.cs
src/CsvProcessor.Functions/Services/: CsvParserService.cs  ICsvParserService.cs  IIdempotencyService.cs  IJsonTransformerService.cs  IServiceBusPublisher.cs  IdempotencyService.cs  JsonTransformerService.cs  ServiceBusPublisher.cs
src/CsvProcessor.Functions/Validators/: CsvOrderLineValidator.cs
src/CsvProcessor.Tests/: CsvProcessor.Tests.csproj
src/CsvProcessor.Tests/Unit/: CsvOrderLineValidatorTests.cs  CsvParserServiceTests.cs  IdempotencyServiceTests.cs  JsonTransformerServiceTests.cs
src/NADIA/: DEPLOYMENT.md  NadiaSpaIntegration.sln  README.md
src/NADIA/FAP-57.SendPOSupplier/: FAP-57.SendPOSupplier.csproj  host.json
src/NADIA/FAP-57.SendPOSupplier/Services/: IDataverseService.cs  ILucyApiService.cs
src/NADIA/FAP-57.Tests/: SendPOSupplierFunctionTests.cs
src/NADIA/FAP-57.Tests/Services/: DataverseMappingTests.cs
src/NADIA/FAP-65.RetrivePOVendor/: FAP-65.RetrivePOVendor.csproj  Program.cs  RetrivePOVendorFunction.cs  host.json  local.settings.json
src/NADIA/FAP-65.Tests/: FAP-65.Tests.csproj  RetrivePOVendorFunctionTests.cs
src/NADIA/Shared.Models/: DataverseStaging.cs  LucyUserResponse.cs
src/NADIA/monitoring/: ISP-NADIA-SPA-Dashboard.workbook.json  README.md
src/SupplierPortal/: README.md  SupplierPortal.sln
src/SupplierPortal/FAP-57.SendPOSupplier/: Program.cs  SendPOSupplierFunction.cs  local.settings.json
src/SupplierPortal/FAP-57.Tests/: FAP-57.Tests.csproj  SendPOSupplierFunctionTests.cs
src/SupplierPortal/Shared.Models/: PurchaseOrderMessage.cs
src/app/: __init__.py  main.py
src/app/application/: __init__.py
src/app/core/: config.py  exceptions.py  logging.py  security.py
src/app/domain/: __init__.py
src/app/infrastructure/: __init__.py  cache.py  database.py
src/app/presentation/: dependencies.py
src/monitoring/: prometheus.yml
src/scripts/: init-db.sql
src/tests/: conftest.py
src/tests/integration/: test_api.py
src/tests/unit/: test_entities.py  test_security.py  test_services.py
(+299 files in other folders)
